fixes z-indexing on HouseSettings page for fix-bug bar

--- a/src/components/HouseSettings/HouseSettings-styles.css
+++ b/src/components/HouseSettings/HouseSettings-styles.css
@@ -13,6 +13,12 @@
   font-family: 'PT Serif', serif;
 }
 
+.houseSettings-container{
+  display: flex;
+  flex-direction: column;
+  z-index: 0;
+}
+
 .house-editform label{
   max-width: 200px;
   max-height: 70px;
@@ -74,6 +80,11 @@ h4.click-address-text{
   background-color: #2A2C33;
   font-size: 0.9em;
   margin-top: 20px;
+  z-index: 2;
+}
+
+.deleteHouse-container{
+  z-index: 1;
 }
 
 .housesettings-error-box{
